--- a/sponsors.html
+++ b/sponsors.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCA Astroknights</title>
+    <title>Sponsors | BCA Astroknights</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>BCA Astroknights</h1>
-    <h2>The Bergen County Academies Rocketry Club</h2>
+    <h1>Sponsors</h1>
+    <h2>The generous sponsors of the BCA Astroknights</h2>
     <nav>
+        <a href="./home.html">Home</a> |
         <a href="./about.html">About</a> |
-        <a href="./sponsors.html">Sponsors</a> |
         <a href="./blog/blog.html">Blog</a>
     </nav>
 </body>
