Add blog test page

--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@
     <nav>
         <a href="./index.html">Home</a> |
         <a href="./sponsors.html">Sponsors</a> |
-        <a href="./blog/blog.html">Blog</a>
+        <a href="./blog.html">Blog</a>
     </nav>
 </body>
-<script type="text/javascript" src="./script.js"></script>
 
 </html>
