--- a/blog.html
+++ b/blog.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCA Astroknights</title>
+    <title>Blogs | BCA Astroknights</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>BCA Astroknights</h1>
-    <h2>The Bergen County Academies Rocketry Club</h2>
+    <h1>Blogs</h1>
+    <div id="blogsContainer"></div>
     <nav>
-        <a href="./about.html">About</a> |
+        <a href="./index.html">Home</a> |
         <a href="./sponsors.html">Sponsors</a> |
         <a href="./blog.html">Blog</a>
     </nav>
 </body>
+<script type="text/javascript" src="./fetchBlogs.js"></script>
 
 </html>
