--- a/sponsors.html
+++ b/sponsors.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="./home.html">Home</a> |
         <a href="./about.html">About</a> |
-        <a href="./blog/blog.html">Blog</a>
+        <a href="./blog.html">Blog</a>
     </nav>
 </body>
 
