--- a/about.html
+++ b/about.html
@@ -5,28 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | BCA Astroknights</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>About</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Auctor augue mauris augue neque gravida. Arcu odio ut sem nulla pharetra diam. Consequat nisl vel
-        pretium lectus quam. Ut aliquam purus sit amet luctus. Consectetur adipiscing elit pellentesque habitant morbi
-        tristique. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Velit laoreet id donec
-        ultrices. Morbi tincidunt ornare massa eget. Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor
-        sit. Euismod in pellentesque massa placerat duis ultricies lacus sed. Augue interdum velit euismod in
-        pellentesque massa placerat duis. Pellentesque adipiscing commodo elit at imperdiet. Lectus urna duis convallis
-        convallis tellus id interdum velit laoreet. Tincidunt eget nullam non nisi est sit amet. Eget velit aliquet
-        sagittis id consectetur purus ut.
-    </p>
-
     <nav>
-        <a href="./index.html">Home</a> |
-        <a href="./sponsors.html">Sponsors</a> |
+        <a href="./index.html">Home</a>
+        <a href="./sponsors.html">Sponsors</a>
         <a href="./blog.html">Blog</a>
     </nav>
+    <div id="main">
+        <h1>About</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Auctor augue mauris augue neque gravida. Arcu odio ut sem nulla pharetra diam. Consequat nisl
+            vel
+            pretium lectus quam. Ut aliquam purus sit amet luctus. Consectetur adipiscing elit pellentesque habitant
+            morbi
+            tristique. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Velit laoreet id donec
+            ultrices. Morbi tincidunt ornare massa eget. Quam lacus suspendisse faucibus interdum posuere lorem ipsum
+            dolor
+            sit. Euismod in pellentesque massa placerat duis ultricies lacus sed. Augue interdum velit euismod in
+            pellentesque massa placerat duis. Pellentesque adipiscing commodo elit at imperdiet. Lectus urna duis
+            convallis
+            convallis tellus id interdum velit laoreet. Tincidunt eget nullam non nisi est sit amet. Eget velit aliquet
+            sagittis id consectetur purus ut.
+        </p>
+    </div>
 </body>
 
 </html>
