--- a/blog.html
+++ b/blog.html
@@ -5,17 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs | BCA Astroknights</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Blogs</h1>
-    <div id="blogsContainer"></div>
     <nav>
-        <a href="./index.html">Home</a> |
-        <a href="./sponsors.html">Sponsors</a> |
-        <a href="./blog.html">Blog</a>
+        <a href="./index.html">Home</a>
+        <a href="./sponsors.html">Sponsors</a>
+        <a href="./about.html">About</a>
     </nav>
+    <div id="main">
+        <h1>Blogs</h1>
+        <div id="blogsContainer"></div>
+    </div>
 </body>
 <script type="text/javascript" src="./fetchBlogs.js"></script>
 
