--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BCA Astroknights</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>BCA Astroknights</h1>
-    <h2>The Bergen County Academies Rocketry Club</h2>
     <nav>
-        <a href="./about.html">About</a> |
-        <a href="./sponsors.html">Sponsors</a> |
+        <a href="./about.html">About</a>
+        <a href="./sponsors.html">Sponsors</a>
         <a href="./blog.html">Blog</a>
     </nav>
+    <div id="main">
+        <h1>BCA Astroknights</h1>
+        <h2>The Bergen County Academies Rocketry Club</h2>
+    </div>
 </body>
 
 </html>
