--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BCA Astroknights</title>
+    <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
-    <nav>
+<body style="overflow:hidden">
+    <img id="rocketImage" src="./rocket.svg">
+    <nav class="fadeNav">
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
         <a href="./blog.html">Blog</a>
     </nav>
-    <div id="main">
+    <div id="main" class="fadeBody">
         <h1>BCA Astroknights</h1>
         <h2>The Bergen County Academies Rocketry Club</h2>
     </div>
