Update fade animation

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body style="overflow:hidden">
     <img id="rocketImage" src="./rocket.svg">
-    <nav class="fadeNav">
+    <nav class="fade">
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
         <a href="./blog.html">Blog</a>
     </nav>
-    <div id="main" class="fadeBody">
+    <div id="main" class="fade">
         <h1>BCA Astroknights</h1>
         <h2>The Bergen County Academies Rocketry Club</h2>
     </div>
