--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BCA Astroknights</title>
-    <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 
 <body style="overflow:hidden">
-    <img id="rocketImage" src="./rocket.svg">
+    <img id="rocketImage" src="./img/rocket.svg">
     <nav class="fade">
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
