--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,9 @@
 <body>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./sponsors.html">Sponsors</a>
         <a href="./about.html">About</a>
+        <a href="./sponsors.html">Sponsors</a>
+        <a href="./blog.html">Blog</a>
     </nav>
     <div id="main">
         <h1>Blogs</h1>
