--- a/sponsors.html
+++ b/sponsors.html
@@ -16,6 +16,7 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
+        <a href="./sponsors.html">Sponsors</a>
         <a href="./blog.html">Blog</a>
     </nav>
     <div id="main">
