Adjust embed css

--- a/about.html
+++ b/about.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | BCA Astroknights</title>
-    <link rel="shortcut icon" type="image/png" href="./img/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
 
-  <body>
-    <nav>
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About</a>
-      <a href="./sponsors.html">Sponsors</a>
-      <a href="./blog.html">Blog</a>
-    </nav>
-    <div id="main">
-      <h1>About</h1>
-      <p>Coming Soon!</p>
-      <div class="sketchfab-embed-wrapper">
-        <iframe
-          class="sketchfab-embed"
-          title="Rocket CAD"
-          frameborder="0"
-          allowfullscreen
-          mozallowfullscreen="true"
-          webkitallowfullscreen="true"
-          allow="autoplay; fullscreen; xr-spatial-tracking"
-          xr-spatial-tracking
-          execution-while-out-of-viewport
-          execution-while-not-rendered
-          web-share
-          src="https://sketchfab.com/models/b35e0dd821a1482a8f79ebbdcb7cb9ca/embed"
-        >
-        </iframe>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | BCA Astroknights</title>
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">About</a>
+    <a href="./sponsors.html">Sponsors</a>
+    <a href="./blog.html">Blog</a>
+  </nav>
+  <div id="main">
+    <h1>About</h1>
+    <p>Coming Soon!</p>
+    <div class="sketchfab-embed-wrapper">
+      <iframe class="sketchfab-embed" title="Rocket CAD" frameborder="0" allowfullscreen mozallowfullscreen="true"
+        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
+        execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="480"
+        src="https://sketchfab.com/models/b35e0dd821a1482a8f79ebbdcb7cb9ca/embed">
+      </iframe>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
