Update about page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,36 @@
   </nav>
   <div id="main">
     <h1>About</h1>
-    <p>Coming Soon!</p>
+    <h2>About the Team</h2>
+    <p>We are a group of teenagers in grades 9-12 at Bergen County Academies (Bergen Academies, BCA) in Hackensack, New
+      Jersey that are passionate about Astro and Aerospace design and technology. We meet with other students from
+      Bergen Academies to educate and enjoy aerospace technology. We are made up of three teams: build, programming, and
+      non-tech. The build team focuses on designing, CADing, and assembling the main project. The programming team
+      focuses on writing code for the sensors embedded in the rocket, as well as the upkeep of our website. The non-tech
+      team focuses ion getting funding for the club and paperwork, as well as general miscellaneous items to keep the
+      team running. </p>
+
+    <h2>The 2021-22 School Year Competition</h2>
+    <p>This is our first year as a club. Our main goal for the 2021-22 Academic School Year is to build and launch a
+      rocket at the “Battle of Rockets” rocketry competition in Culpeper, Virginia. The objective is to launch a rocket
+      that deploys a payload with sensors and a camera that relays live telemetry data to a ground station. This rocket
+      must be able to be launched 3 times with only minor field repairs (Learn More: <a
+        href="www.rocketbattle.org/competition.html">www.rocketbattle.org/competition.html</a> , see “Deployable Sensor
+      Payload Event” description).</p>
+
+    <h2>The Leaders</h2>
+    <h3>Founding Member, Leader – Aarnav Sabale</h3>
+    <h3>Build Captain – Aarnav Sabale</h3>
+    <h3>Build Captain – Tanush Tammanagoudar</h3>
+    <h3>Programming Captain – Amartya Kalra</h3>
+    <h3>Non-Tech Captain – Benjamin Good</h3>
+    <h3>Treasurer - Bhuvan Madala</h3>
+    <h3>Secretary – Riddhi Lamba</h3>
+
+    <h2>Contact Us</h2>
+    <a href="mailto:astroknightsbca@gmail.com">astroknightsbca@gmail.com</a>
+    <br>
+    <br>
     <div class="sketchfab-embed-wrapper">
       <iframe class="sketchfab-embed" title="Rocket CAD" frameborder="0" allowfullscreen mozallowfullscreen="true"
         webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
