--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
       Payload Event” description).</p>
 
     <h2>The Leaders</h2>
-    <h3>Founding Member, Leader – Aarnav Sabale</h3>
-    <h3>Build Captain – Aarnav Sabale</h3>
-    <h3>Build Captain – Tanush Tammanagoudar</h3>
-    <h3>Programming Captain – Amartya Kalra</h3>
-    <h3>Non-Tech Captain – Benjamin Good</h3>
-    <h3>Treasurer - Bhuvan Madala</h3>
-    <h3>Secretary – Riddhi Lamba</h3>
+    <p>Founding Member, Leader – Aarnav Sabale</p>
+    <p>Build Captain – Aarnav Sabale</p>
+    <p>Build Captain – Tanush Tammanagoudar</p>
+    <p>Programming Captain – Amartya Kalra</p>
+    <p>Non-Tech Captain – Benjamin Good</p>
+    <p>Treasurer - Bhuvan Madala</p>
+    <p>Secretary – Riddhi Lamba</p>
 
     <h2>Contact Us</h2>
     <a href="mailto:astroknightsbca@gmail.com">astroknightsbca@gmail.com</a>
