--- a/about.html
+++ b/about.html
@@ -37,7 +37,14 @@
       must be able to be launched 3 times with only minor field repairs (Learn More: <a
         href="www.rocketbattle.org/competition.html">www.rocketbattle.org/competition.html</a> , see “Deployable Sensor
       Payload Event” description).</p>
-
+    <h2>Current CAD Model</h2>
+    <div class="sketchfab-embed-wrapper">
+      <iframe class="sketchfab-embed" title="Rocket CAD" frameborder="0" allowfullscreen mozallowfullscreen="true"
+        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
+        execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="480"
+        src="https://sketchfab.com/models/b35e0dd821a1482a8f79ebbdcb7cb9ca/embed">
+      </iframe>
+    </div>
     <h2>The Leaders</h2>
     <p>Founding Member, Leader – Aarnav Sabale</p>
     <p>Build Captain – Aarnav Sabale</p>
@@ -46,18 +53,8 @@
     <p>Non-Tech Captain – Benjamin Good</p>
     <p>Treasurer - Bhuvan Madala</p>
     <p>Secretary – Riddhi Lamba</p>
-
     <h2>Contact Us</h2>
     <a href="mailto:astroknightsbca@gmail.com">astroknightsbca@gmail.com</a>
-    <br>
-    <br>
-    <div class="sketchfab-embed-wrapper">
-      <iframe class="sketchfab-embed" title="Rocket CAD" frameborder="0" allowfullscreen mozallowfullscreen="true"
-        webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-        execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="480"
-        src="https://sketchfab.com/models/b35e0dd821a1482a8f79ebbdcb7cb9ca/embed">
-      </iframe>
-    </div>
   </div>
 </body>
 
