--- a/blog.html
+++ b/blog.html
@@ -17,10 +17,10 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
-        <a href="./blog.html">Blog</a>
+        <a href="./blog.html">Team Updates</a>
     </nav>
     <div id="main">
-        <h1>Blogs</h1>
+        <h1>Team Updates</h1>
         <div id="blogsContainer"></div>
     </div>
 </body>
