--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
-        <a href="./blog.html">Blog</a>
+        <a href="./blog.html">Team Updates</a>
     </nav>
     <div id="main" class="fade">
         <h1>BCA Astroknights</h1>
