--- a/sponsors.html
+++ b/sponsors.html
@@ -17,7 +17,7 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./sponsors.html">Sponsors</a>
-        <a href="./blog.html">Blog</a>
+        <a href="./blog.html">Team Updates</a>
     </nav>
     <div id="main">
         <h1>Sponsors</h1>
