--- a/about.html
+++ b/about.html
@@ -49,10 +49,11 @@
     <p>Founding Member, Leader – Aarnav Sabale</p>
     <p>Build Captain – Aarnav Sabale</p>
     <p>Build Captain – Tanush Tammanagoudar</p>
-    <p>Programming Captain – Amartya Kalra</p>
+    <p>Programming Captain – Krish Arora, Amartya Kalra</p>
     <p>Non-Tech Captain – Benjamin Good</p>
     <p>Treasurer - Bhuvan Madala</p>
     <p>Secretary – Riddhi Lamba</p>
+    <p>Website - Krish Arora</p>
     <h2>Contact Us</h2>
     <a href="mailto:astroknightsbca@gmail.com">astroknightsbca@gmail.com</a>
   </div>
